# poc-server-client

./: Cargo.toml  Makefile  README.md
rawmad-client/: Cargo.toml
rawmad-client/src/: main.rs
rawmad-common/: Cargo.toml
rawmad-common/src/: lib.rs
rawmad-server/: Cargo.toml
rawmad-server/src/: main.rs
