[package]
name = "rawmad-client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rawmad-common = { path = "../rawmad-common" }
tokio-tungstenite = "*"
log = "0.4"
futures-util = { version = "0.3", default-features = false, features = ["sink", "std"] }
tokio = { version = "1.24.1", features = ["full"] }
env_logger = "0.9"
bincode = "1.3"
url = "2.0.0"

[dependencies.tungstenite]
version = "0.18.0"
default-features = false